--- a/html/ui.html
+++ b/html/ui.html
@@ -12,13 +12,13 @@
                 <div class="channel">
                     <input id="channel" type="number" name="channel" min="1" max="500" placeholder="1-500">
                 </div>
-                <div id="submit"></div>
-                <div id="disconnect"></div>
-		<div id="volumeDown"></div>
-                <div id="volumeUp"></div>    
-		<div id="increaseradiochannel"></div>
-                <div id="decreaseradiochannel"></div>
-                <div id="poweredOff"></div>	
+                <div id="submit" title="إتصال"></div>
+                <div id="disconnect" title="خروج"></div>
+		        <div id="volumeDown" title="🔉"></div>
+                <div id="volumeUp" title="🔊"></div>    
+		        <div id="increaseradiochannel" title="التالي"></div>
+                <div id="decreaseradiochannel" title="السابق"></div>
+                <div id="poweredOff" title="إطفاء"></div>	
             </div>
         </div>
         <script src="js/script.js" type="text/javascript"></script>
